Atualização do código

--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
                 </div>
                 
             </div>
-           
+            <div id="imgprofile">
+                <img src="imagem/foto-removebg-preview.png" alt="">
+
+            </div>
             <div id="about">
 
 
